testing/2_functional/invalidRequestBody/v1.2.2/Dataprovider/mwdi+diagram.invalidRequestBody.optionalReqBody.dataprovider.plantuml
@startuml mwdi+diagram.invalidRequestBody.optionalReqBody.dataprovider
skinparam responseMessageBelowArrow true

title
mwdi+testcase.invalidRequestBody.optionalReqBody.dataprovider
end title

participant "Postman" as Postman
participant "Data" as Data
participant "Collection" as Collection

participant "/v1/provide-list-of-links" as PLOL
participant "/v1/provide-data-of-all-links" as PDOAL


group Preparation
  Data --\\o Postman : {servers}
  activate Postman
  Postman --\\o Collection : {servers}
end

group /v1/provide-list-of-links
  Collection --\\o Postman : {servers}
  Postman -> PLOL : {invalidRequestBody}
  Postman <-- PLOL : 400
  note right Postman #Orange
    responseCode validation (400?)
  end note
end

group /v1/provide-data-of-all-links
  Collection --\\o Postman : {servers}
  Postman -> PDOAL : {invalidRequestBody}
  Postman <-- PDOAL : 400
  note right Postman #Orange
    responseCode validation (400?)
  end note
end


deactivate Postman

@enduml
